Nov  1 2001 -	Many internal changes. We no longer use req->notes for things
		that shouldn't be there, handler directives can be restricted
		to specific file extensions thereby allowing multiple handlers
		per directory, etc. The config is now stored in a new hlist
		object, which can be accessed from python via an hlistobject.

Aug 16 2001 -   Mod_python is compiling and running with Apache 2.0 and the
		filter functionality seems to work. There is still a lot of 
		work to be done though.

Aug  4 2001 -   2.7.6 released. Sometime prior a publisher upload bug was 
                fixed.

Jun 11 2001 -	2.7.5 released for those who want Python 2.1

Jun 11 2001 -	Changed configure.in to accomodate Python 2.1. It looks like
		everything else works without any changes.

Jun  4 2001 -	2.7.4 released.

May 28 2001 -	Renamed make_table, log_error, table_add and copy_table with
		mp_ so as to not get confused with the ones in ap_compat.h

May 24 2001 -	PythonNoReload obsoleted in favor of PythonAutoReload.

May 23 2001 -	The "fix" re import on Apr 10 turned out to be a bug and
		I put it back. But in the process found that the FLAG directives
		were not read correctly - e.g. mere presence sometimes indicated
		On. Also, ReportError was returning DONE in finally clause which 
		was wrong.

May 22 2001 -   The bug that was supposedly fixed below was a bit more 
		complicated than it seemed at first. The fix below caused
		a circular reference, and some further fixing had to be done,
		and now it's really fixed, thanks to Chris's dilligence.

May 17 2001 -	Fixed a threading bug reported by Chris Trengove where
		the callback object could have the reference to self.req
		overwritten by other threads. The reference to the Request
		object is now stored inside the requestobject C structure.

May 12 2001 -	2.7.3 released

Apr 10 2001 - 	Fixed a PythonImport bug reported by Chris Hagner. Removed
		the atol hack as per Miguel Marques patch. Fixed apache.py